Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -521,10 +521,10 @@ Remember that \textbf{Combinations} can help us to count situations where we nee
 \vspace{0.3cm}
 
 \textcolor{navy}{\textbf{Theorem}}: \textbf{Multinomial Coefficients} follow the format of this:
-    $$\binom{n}{k}\cdot (\text{Coefficients } \cdot\text{ Powers})$$
+    $$\binom{n}{k}\cdot (\text{Coefficients }^{ Powers})$$
 
 \begin{itemize}
-    \item This is also expressed as this: $\binom{n}{n_1,n_2,\space...,n_k}$.
+    \item This is also expressed as this: $\binom{n}{n_1,n_2,\space...,n_k}=\frac{n!}{n_1!n_2!...n_k!}$.
 \end{itemize}
 
 \vspace{0.25cm}
@@ -758,7 +758,7 @@ This is the final part of \textbf{PIE}: how can we calculate the number of items
     \vspace{0.25cm}
 
 \begin{itemize}
-    \item \textcolor{lime}{\textbf{REMEMBER}}: Here's a little jingle to help you remember the formulas, \underline{L of K has K minus one, E of K has K plus none}!
+    \item \textcolor{lime}{\textbf{REMEMBER}}: Here's a little jingle to help you remember the formulas, \underline{E of K has K plus one, L of K has K plus none}!
     \item Ultimately, everything else is the same as our formula for $E_k$. Our terms of $S_i$ would even be the same, we just need new coefficients!
 \end{itemize}
 
